добавила ентити image, не получается создать объявление

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.username=postgres
 #spring.datasource.password=73aberiv
 spring.datasource.password=Anna_098!
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
