--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/diploma
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.password=postgres
+spring.datasource.password=73aberiv
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
